# pipeworkmc-packet

./: Cargo.toml  README.md
src/: lib.rs  meta.rs
src/c2s/: mod.rs
src/c2s/config/: client_info.rs  cookie_response.rs  custom_action.rs  custom_click_action.rs  custom_payload.rs  finish_acknowledged.rs  keep_alive.rs  known_packs.rs  mod.rs  pack_status.rs  plugin_message.rs  pong.rs  resource_pack_status.rs
src/c2s/handshake/: intent.rs  intention.rs  mod.rs
src/c2s/login/: cookie_response.rs  custom_query_response.rs  encrypt_response.rs  finish_acknowledged.rs  mod.rs  plugin_response.rs  start.rs
src/c2s/play/: acknowledge_chat.rs  acknowledge_teleport.rs  chat_command.rs  chat_message.rs  chunk_batch_received.rs  client_info.rs  close_container.rs  cookie_response.rs  custom_payload.rs  game_request.rs  keep_alive.rs  loaded.rs  mod.rs  pong.rs  query_block_entity_tag.rs  query_block_tag.rs  query_character_tag.rs  select_hotbar.rs  set_difficulty.rs  set_game_mode.rs  set_player_move_flags.rs  set_player_pos.rs  set_player_pos_rot.rs  set_player_rot.rs  signed_chat_command.rs  swing_arm.rs  tick_end.rs
src/c2s/status/: mod.rs  ping.rs  request.rs
src/s2c/: mod.rs
src/s2c/config/: custom_payload.rs  disconnect.rs  finish.rs  keep_alive.rs  known_packs.rs  mod.rs  registry_data.rs
src/s2c/login/: compression.rs  cookie_request.rs  disconnect.rs  encrypt_request.rs  finish.rs  finished.rs  mod.rs  plugin_request.rs
src/s2c/play/: add_character.rs  character_event.rs  disconnect.rs  game_event.rs  keep_alive.rs  login.rs  mod.rs  remove_characters.rs
(+3 files in other folders)
