[package]
name    = "pipeworkmc-packet"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"
missing_docs  = "deny"


[dependencies.pipeworkmc-codec]
path = "../pipeworkmc-codec"

[dependencies.pipeworkmc-data]
path     = "../pipeworkmc-data"
features = [ "generated" ]

# Serialisation

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"
