[package]
name    = "pipeworkmc-packet"
version = "0.1.0"
edition = "2024"

[lints.rust]
unused_parens = "allow"
# missing_docs  = "deny" # TODO


[dependencies.pipeworkmc-data]
path     = "../pipeworkmc-data"
features = [ "generated" ]

[dependencies.netzer]
git      = "https://github.com/PipeworkMC/netzer"
branch   = "main"
features = [ "derive" ]

# Serialisation

[dependencies.serde]
version  = "1.0"
features = [ "derive" ]

[dependencies.serde_json]
version = "1.0"
